fix too long expression

--- a/ui/index.css
+++ b/ui/index.css
@@ -22,3 +22,7 @@
   justify-content: center;
   align-items: center;
 }
+
+svg {
+  max-width: 100% !important;
+}
